add delete button to edit post screen and welcome image to dashboard

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -35,6 +35,16 @@
           </div>
         </div>
       </div>
+      <div class="col-12 col-md-6">
+      <h1 class="text-800 fw-normal">
+        Welcome home, {{username}}.
+      </h1>
+        <img
+        class="img"
+        src="/img/spot-illustrations/2.svg"
+        alt=""
+      />
+      </div>
     </div>
   </div>
   {{! <!-- End Page Header --> }}
