add guest avatar

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -56,7 +56,7 @@
         data-list='{"valueNames":["title","comments","post","time"],"page":6}'
       >
         {{! Posts Header }}
-        <div class="row align-items-end justify-content-between pb-5 g-3">
+        <div class="row align-items-end justify-content-between pb-5 g-3" id="user-posts">
           <div class="col-auto">
             <h3>
               Your Posts
