--- a/views/partials/top_nav.handlebars
+++ b/views/partials/top_nav.handlebars
@@ -276,7 +276,7 @@
               {{#if id}}
               <img class="rounded-circle" src="/img/team/{{id}}.png" alt="" />
               {{else}}
-              <img class="rounded-circle" src="/img/team/1.png" alt="" />
+              <img class="rounded-circle" src="/img/team/new-user.png" alt="" />
               {{/if}}
             </div>
           </a>
@@ -300,7 +300,7 @@
                     {{else}}
                     <img
                       class="rounded-circle"
-                      src="/img/team/1.png"
+                      src="/img/team/new-user.png"
                       alt=""
                     />
 
@@ -312,7 +312,7 @@
                   </h6>
                   {{else}}
                   <h6 class="mt-2">
-                    New User
+                    Guest
                   </h6>
                   {{/if}}
                 </div>
@@ -340,7 +340,7 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link px-3" href="#!">
+                    <a class="nav-link px-3" href="/dashboard#user-posts">
                       <span class="me-2 text-900" data-feather="lock"></span>
                       Posts & Activity
                     </a>
