fix auth link bug

--- a/views/partials/vertical_nav.handlebars
+++ b/views/partials/vertical_nav.handlebars
@@ -110,7 +110,7 @@
               <li class="nav-item">
                 <a
                   class="nav-link"
-                  href="authentication/sign-up"
+                  href="/authentication/sign-up"
                   data-bs-toggle=""
                   aria-expanded="false"
                 >
@@ -125,7 +125,7 @@
               <li class="nav-item">
                 <a
                   class="nav-link"
-                  href="authentication/sign-in"
+                  href="/authentication/sign-in"
                   data-bs-toggle=""
                   aria-expanded="false"
                 >
