--- a/views/partials/top_nav.handlebars
+++ b/views/partials/top_nav.handlebars
@@ -116,7 +116,7 @@
                   <div class="col-4">
                     <a
                       class="d-block hover-bg-200 p-2 rounded-3 text-center text-decoration-none mb-3"
-                      href="#!"
+                      href="slack://"
                       target="_blank"
                     >
                       <img
@@ -132,7 +132,7 @@
                   <div class="col-4">
                     <a
                       class="d-block hover-bg-200 p-2 rounded-3 text-center text-decoration-none mb-3"
-                      href="#!"
+                      href="https://github.com/laszlo-ratesic"
                       target="_blank"
                     >
                       <img
@@ -148,7 +148,7 @@
                   <div class="col-4">
                     <a
                       class="d-block hover-bg-200 p-2 rounded-3 text-center text-decoration-none mb-3"
-                      href="#!"
+                      href="https://drive.google.com/drive/u/0/"
                       target="_blank"
                     >
                       <img
@@ -164,7 +164,7 @@
                   <div class="col-4">
                     <a
                       class="d-block hover-bg-200 p-2 rounded-3 text-center text-decoration-none mb-3"
-                      href="#!"
+                      href="https://twitter.com/home?lang=en"
                       target="_blank"
                     >
                       <img
@@ -180,7 +180,7 @@
                   <div class="col-4">
                     <a
                       class="d-block hover-bg-200 p-2 rounded-3 text-center text-decoration-none mb-3"
-                      href="#!"
+                      href="https://www.pinterest.com/"
                       target="_blank"
                     >
                       <img
@@ -196,7 +196,7 @@
                   <div class="col-4">
                     <a
                       class="d-block hover-bg-200 p-2 rounded-3 text-center text-decoration-none mb-3"
-                      href="#!"
+                      href="https://www.linkedin.com/in/keenan-chiasson/"
                       target="_blank"
                     >
                       <img
@@ -212,7 +212,7 @@
                   <div class="col-4">
                     <a
                       class="d-block hover-bg-200 p-2 rounded-3 text-center text-decoration-none mb-3"
-                      href="#!"
+                      href="https://maps.google.com/"
                       target="_blank"
                     >
                       <img
@@ -228,7 +228,7 @@
                   <div class="col-4">
                     <a
                       class="d-block hover-bg-200 p-2 rounded-3 text-center text-decoration-none mb-3"
-                      href="#!"
+                      href="https://photos.google.com/"
                       target="_blank"
                     >
                       <img
@@ -244,7 +244,7 @@
                   <div class="col-4">
                     <a
                       class="d-block hover-bg-200 p-2 rounded-3 text-center text-decoration-none mb-3"
-                      href="#!"
+                      href="spotify://"
                       target="_blank"
                     >
                       <img
